--- a/checkliste.html
+++ b/checkliste.html
@@ -16,123 +16,133 @@
 <body class="bg-bgfarve baggrund">
 
 <div class="container">
-    <nav class="navbar nav navbar-dark bg-bgfarve fixed-top" style="border-bottom: 2px solid white;">
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark bg-bgfarve fixed-top" style="border-bottom: 2px solid white;">
         <div class="container-fluid">
-            <img src="image/Logo.webp" alt="logo">
+            <!-- Logo -->
+            <img src="image/Logo.webp" alt="Virksomhedens logo">
+
+            <!-- Hjælp knap -->
             <button type="button" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
+
+            <!-- Navbar-toggler -->
             <li class="nav-item">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+                        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Min profil</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Find venner</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="d-flex mt-3" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-success" type="submit">Search</button>
-                        </form>
-                    </div>
-                </div>
+            </li>
 
+            <!-- Offcanvas-menu -->
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                 aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Min profil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Find venner</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex mt-3" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </nav>
-    <br> <br> <br>  <br>  <br>
 
+    <!-- Spacing efter navbar -->
+    <div style="margin-top: 100px;"></div>
+
+    <!-- Indhold -->
     <div class="container">
         <div class="row align-items-start">
-
+            <!-- Venstre sektion -->
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="planet">
-                    <img src="image/Planet1000%20copy.webp" alt="planet" class="img-fluid">
+                    <img src="image/Planet1000%20copy.webp" alt="Billede af en planet" class="img-fluid">
                 </div>
             </div>
 
-
+            <!-- Højre sektion -->
             <div class="col-md-6">
-
-                <div class="card mb-3 justify-content-center" style="border: none; width: 400px">
+                <!-- Overskrift kort -->
+                <div class="card mb-3 justify-content-center" style="border: none;">
                     <div class="card-body bg-graa">
                         <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
                     </div>
                 </div>
 
-
-                <div class="card " style="border: none">
+                <!-- Checkliste -->
+                <div class="card" style="border: none;">
                     <div class="card-body bg-graa">
-
-                        <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold text-graa">Købte ind med mit eget net</div>
-                            </div>
-                            <span class="badge text-bg-groen rounded-pill">+75</span>
-                        </li>
-                        <br>
-                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="secondCheckbox">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold text-graa">Brugte egen drikkedunk</div>
-                            </div>
-                            <span class="badge text-bg-groen rounded-pill">+100</span>
-                        </li>
-                        <br>
-                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="thirdCheckbox">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold text-graa">Jeg gik/cyklede i dag</div>
-                            </div>
-                            <span class="badge text-bg-groen rounded-pill">+90</span>
-                        </li>
-                        <br>
-                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fourthCheckbox">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold text-graa">Jeg spiste rester</div>
-                            </div>
-                            <span class="badge text-bg-groen rounded-pill">+80</span>
-                        </li>
-                        <br>
-                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fifthCheckbox">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold text-graa">Købte genbrug</div>
-                            </div>
-                            <span class="badge text-bg-groen rounded-pill">+85</span>
-                        </li>
-                        <br>
-                        <button type="button" class="btn btn-blaa w-25 text-hvid">Færdig</button>
+                        <!-- Klimamissioner -->
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold text-graa">Købte ind med mit eget net</div>
+                                </div>
+                                <span class="badge text-bg-groen rounded-pill">+75</span>
+                            </li>
+                            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5 mt-3" style="padding: 20px;">
+                                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="secondCheckbox">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold text-graa">Brugte egen drikkedunk</div>
+                                </div>
+                                <span class="badge text-bg-groen rounded-pill">+100</span>
+                            </li>
+                            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5 mt-3" style="padding: 20px;">
+                                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="thirdCheckbox">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold text-graa">Jeg gik/cyklede i dag</div>
+                                </div>
+                                <span class="badge text-bg-groen rounded-pill">+90</span>
+                            </li>
+                            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5 mt-3" style="padding: 20px;">
+                                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fourthCheckbox">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold text-graa">Jeg spiste rester</div>
+                                </div>
+                                <span class="badge text-bg-groen rounded-pill">+80</span>
+                            </li>
+                            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5 mt-3" style="padding: 20px;">
+                                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fifthCheckbox">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold text-graa">Købte genbrug</div>
+                                </div>
+                                <span class="badge text-bg-groen rounded-pill">+85</span>
+                            </li>
+                        </ul>
+                        <!-- Færdig-knap -->
+                        <button type="button" class="btn btn-blaa w-25 text-hvid mt-3">Færdig</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-</div>
-</div>
 
 
 
