--- a/underside.html
+++ b/underside.html
@@ -16,7 +16,7 @@
 
 <body class="bg-bgfarve baggrund">
 <div class="container">
-    <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
+    <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white" style="border-bottom: 2px solid white;">
         <div class="container-fluid">
             <a href="#">
                 <img src="image/logolille.webp" alt="logo">
@@ -61,7 +61,7 @@
 
 
 <div>
-    <h1 class="text-orange justify-content-center d-flex" style="margin-top:100px; ">1000</h1>
+    <h1 class="text-orange justify-content-center d-flex" style="margin-top:130px; ">1000</h1>
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
 </div>
 <div class="planet justify-content-center d-flex align-items-center">
